# ansible-mvp

./: .gitignore  AGENTS.md  DOLT_REMOTE.md  Makefile  README.md  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
ansible/inventory/: localhost.ini
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: run_synthetic_workflow.yml
ansible/tasks/: run_workflow_stage.yml
configs/: expected_shape.ad_hoc_extract.yaml  expected_shape.required_extract.yaml  run.synthetic.yaml
docs/: architecture.md  claude-plan-post-review.md  claude-review.md  core-workflow-refactoring-recommendations.md  how_to_use_this_mvp.md  post_implementation_assessment.md  provenance_first_mvp_concept_spec.md  trace_required_csv.md
docs/archive/: claude-plan-post-review.md  claude-review.md  final-mvp-verification-20260704.md
openspec/changes/clarify-workflow-lifecycle/: proposal.md  tasks.md
openspec/changes/harden-provenance-trust-boundaries/: design.md  tasks.md
openspec/changes/harden-run-freshness-and-execution-context/: design.md  proposal.md  tasks.md
openspec/changes/introduce-minimal-mock-bsub-boundary/: design.md  proposal.md  tasks.md
openspec/changes/scaffold-runnable-provenance-mvp/: design.md  proposal.md  tasks.md
openspec/specs/controlled-source-gate/: spec.md
openspec/specs/provenance-manifest/: spec.md
openspec/specs/synthetic-provenance-run/: spec.md
scripts/: bootstrap_controlled_source.sh
src/provenance/: __init__.py  cli.py  config.py  git_state.py  hashing.py  inventory.py  manifest.py  paths.py  preflight.py  reports.py  scheduler.py  stages.py  validation.py  workspace.py
templates/controlled-source-demo/procs/: run-script.sh
templates/controlled-source-demo/scripts/: ad_hoc_extract.py  extract_required.pl  (+1 more)
tests/: test_ansible_orchestration.py  test_cli.py  test_configs.py  test_controlled_source_payload.py  test_git_state.py  test_hashing.py  test_inventory.py  test_makefile_quality_gate.py  test_manifest.py  test_paths.py  test_preflight.py  test_reports.py  test_synthetic_workflow_smoke.py  test_validation.py  test_workspace.py
(+39 files in other folders)
