[project]
name = "ansible-mvp-provenance"
version = "0.1.0"
description = "Local provenance-first synthetic workflow MVP helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "PyYAML>=6.0",
]

[project.scripts]
provenance = "provenance.cli:_entrypoint"

[dependency-groups]
dev = [
    "basedpyright>=1.29",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["provenance"]

[tool.basedpyright]
include = ["src/provenance"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
